--- a/src/app/student/edit-profile/edit-profile.component.html
+++ b/src/app/student/edit-profile/edit-profile.component.html
@@ -33,22 +33,8 @@
     <label for="dateOfJoining">Date of Joining:</label>
     <input id="dateOfJoining" type="date" formControlName="dateOfJoining" placeholder="Enter your Date Of Joining" required [(ngModel)]="student.dateOfJoining">
     </div>
-    <!-- <div class="form-group">
-        <label for="academicYear">Academic year:<span class="required">*</span></label>
-        <select class="form-select academic-year" aria-label="Academic Year"  formControlName="academicYear"  placeholder="Select academicYear" required [(ngModel)]="student.academicYear">
-            <option>Select Academic Year</option>
-            <option value="2019-2023">2023-2027</option>
-            <option value="2019-2023">2022-2026</option>
-            <option value="2019-2023">2021-2025</option>
-            <option value="2019-2023">2020-2024</option>
-            <option value="2019-2023">2019-2023</option>
-            <option value="2018-2022">2018-2022</option>
-            <option value="2017-2021">2017-2021</option>
-            <option value="2016-2020">2016-2020</option>
-            <option value="2015-2019">2015-2019</option>
-          </select>
-        </div> -->
-    <button type="submit" class="btn btn-primary" id="edit">Save</button>
+    
+    <button type="submit" class="btn btn-primary" id="edit">Save Changes</button>
     &nbsp;
     
     <button type="reset" class="btn btn-primary" id="reset">Reset</button>   
