--- a/src/app/admin/add-student/add-student.component.css
+++ b/src/app/admin/add-student/add-student.component.css
@@ -1,61 +1,68 @@
-
-h3{
+h3 {
     text-align: center;
-  }
-    .required {
-      color: red;
-    }
-    select {
-      width: 100%;
-      height: 34px;
-      font-size: 17px;
-      color:black;
-      background-color: #fff;
-      /* border: 1px solid #878383; */
-      border-radius: 4px;
-    }
-    
-    .card {
-      border-radius: 10px;
-      margin-top: 90px;
-    }
-    
-    .card-header{
-        font-weight: bold;
-        background-color: rgb(89, 141, 214);
-      }
-      .card-body{
-        background-color: rgb(3, 26, 59);
-      }
-    .form-group {
-      /* display: flex; */
-      align-items: center;
-      margin-bottom: 10px;  
-    }
-    
-    .form-group label {
-      width: 150px;
-      /* margin-right: 20px; */
-      font-weight: bold;
-      color: #fff;
-    }
-    .form label {
-      font-weight: bold;
-      color: #fff;
-    }
-    .form-group input,textarea {
-      border-radius: 5px;
-      width: 250px;
-    }  
-    #add {
-      margin-top: 20px;
-      margin-left: 145px;
-    }
-    #reset {
-      margin-top: 20px;
-      margin-left: 50px;
-    }
-   .danger{
-   margin-left: 150px;
-   color: red;
-   }
+}
+
+.required {
+    color: red;
+}
+
+select {
+    width: 100%;
+    height: 34px;
+    font-size: 17px;
+    color: black;
+    background-color: #fff;
+    /* border: 1px solid #878383; */
+    border-radius: 4px;
+}
+
+.card {
+    border-radius: 10px;
+    margin-top: 90px;
+}
+
+.card-header {
+    font-weight: bold;
+    background-color: rgb(89, 141, 214);
+}
+
+.card-body {
+    background-color: rgb(3, 26, 59);
+}
+
+.form-group {
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.form-group label {
+    width: 150px;
+    font-weight: bold;
+    color: #fff;
+}
+
+.form label {
+    font-weight: bold;
+    color: #fff;
+}
+
+.form-group input,
+textarea {
+    border-radius: 5px;
+    width: 250px;
+}
+
+#add {
+    margin-top: 20px;
+    margin-left: 145px;
+}
+
+#reset {
+    margin-top: 20px;
+    margin-left: 50px;
+}
+
+.danger {
+    margin-left: 150px;
+    color: red;
+}
