--- a/src/app/admin/student-list/student-list.component.css
+++ b/src/app/admin/student-list/student-list.component.css
@@ -3,17 +3,26 @@
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   margin-top: 100px;
 }
-.required{
+
+.required {
   color: red;
 }
+
 .card-header {
   font-weight: bold;
   background-color: rgb(89, 141, 214);
 }
-.card-body{
- 
+
+table, th, td {
+  border: 1px solid white;
+  border-collapse: collapse;
+  margin-left:auto;
+  margin-right:auto
+}
+.card-body {
   background-color: rgb(3, 26, 59);
 }
+
 .form-group label {
   font-weight: bold;
   color: #fff;
@@ -22,26 +31,35 @@
 .form-group input {
   border-radius: 5px;
 }
-.table{
-  background-color:black;
+thead{
+  color: wheat;
+}
+.table {
+  background-color: black;
   color: white;
 }
-select {
-    width: 100%;
-    height: 34px;
-    font-size: 14px;
-    line-height: 1.42857143;
-    color: #555;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  .container {
-    margin-top: 20px;
-    margin: 1px;
-    width: 300px;
-  }
 
-#view{
+select {
+  width: 100%;
+  height: 34px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.container {
+  margin-top: 20px;
+  margin: 1px;
+  width: 300px;
+}
+
+#view {
   margin-left: 200px;
+}
+
+#edit{
+  width: 100px;
 }
