--- a/src/app/student/change-password/change-password.component.html
+++ b/src/app/student/change-password/change-password.component.html
@@ -7,28 +7,25 @@
           <h3>Change Password</h3>
         </div>
         <div class="card-body">
-          <form [formGroup]="reactiveForm" (ngSubmit)="onSubmit()">
+          <form [formGroup]="reactiveForm" (ngSubmit)="changePassword()">
             <div class="form-group">
               <label class="col-md-4" for="email">Email:<span class="required">*</span></label>
-              <input class="col-md-6" id="email" type="email" formControlName="email" placeholder="Enter your email" required
-                [(ngModel)]="student.email" disabled>
+              <input class="col-md-6" id="email" type="email" formControlName="email" placeholder="Enter your email"
+                required [(ngModel)]="student.email" disabled>
             </div>
-            <div class="form-group">
-              <label class="col-md-4" for="password">Current Password:<span class="required">*</span></label>
-              <input class="col-md-6" id="password" type="password" formControlName="password" placeholder="Enter your password"
-                required>
-            </div>
+
             <div class="form-group">
               <label class="col-md-4" for="newPassword">New Password:<span class="required">*</span></label>
               <input class="col-md-6" id="newPassword" type="password" formControlName="newPassword"
-                placeholder="Enter your new password" required>
+                placeholder="Enter your new password" maxlength="8" required>
             </div>
             <div class="form-group">
-              <label class="col-md-4"for="confirmPassword">Confirm Password:<span class="required">*</span></label>
+              <label class="col-md-4" for="confirmPassword">Confirm Password:<span class="required">*</span></label>
               <input class="col-md-6" id="confirmPassword" type="password" formControlName="confirmPassword"
-                placeholder="Enter your Confirm password" required>
+                placeholder="Enter your Confirm password" maxlength="8" required>
             </div>
-            <button type="submit" id="change"class="btn btn-primary">Submit</button> &nbsp;
+            <button type="submit" id="change" class="btn btn-primary" [disabled]="!reactiveForm.valid">Submit</button>
+            &nbsp;
             <button type="reset" id="reset" class="btn btn-primary">Reset</button>
 
           </form>
