--- a/src/app/admin/add-staff/add-staff.component.css
+++ b/src/app/admin/add-staff/add-staff.component.css
@@ -9,8 +9,8 @@ h3 {
 select {
     width: 100%;
     height: 34px;
-    font-size: 14px;
-    color: #555;
+    font-size: 16px;
+    color: #000;
     background-color: #fff;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -31,14 +31,26 @@ select {
     background-color: rgb(3, 26, 59);
 }
 
+.form-group {
+    align-items: center;
+    margin-bottom: 10px;
+}
+
 .form-group label {
+    width: 150px;
     font-weight: bold;
-    width: 100px;
     color: #fff;
 }
 
-.form-group input {
+.form label {
+    font-weight: bold;
+    color: #fff;
+}
+
+.form-group input,
+textarea {
     border-radius: 5px;
+    width: 250px;
 }
 
 #add {
@@ -54,4 +66,8 @@ select {
 .form label {
     font-weight: bold;
     color: #fff;
+}
+.danger {
+    margin-left: 150px;
+    color: red;
 }
