--- a/src/app/admin/add-staff/add-staff.component.html
+++ b/src/app/admin/add-staff/add-staff.component.html
@@ -8,11 +8,11 @@
                     <h3>Add Staff</h3>
                 </div>
                 <div class="card-body">
-                    <form [formGroup]="reactiveForm" (ngSubmit)="onSubmit()">
+                    <form [formGroup]="reactiveForm" (ngSubmit)="addStaff()">
                         <div class="form-group">
                             <label for="name">Name:<span class="required">*</span></label>
                             <input id="name" type="text" formControlName="name" placeholder="Enter your name" required>
-                            <span class="text-danger"
+                            <span class="danger"
                                 *ngIf="(reactiveFormControl.name.touched) && reactiveFormControl.name.errors?.required">
                                 Name is required
                             </span>
@@ -21,7 +21,7 @@
                             <label for="dob">Date of Birth:<span class="required">*</span></label>
                             <input id="dob" type="date" formControlName="dob" placeholder="Select date of birth"
                                 required>
-                            <span class="text-danger"
+                            <span class="danger"
                                 *ngIf="(reactiveFormControl.dob.touched) && reactiveFormControl.dob.errors?.required">
                                 Date of Birth is required
                             </span>
@@ -30,25 +30,33 @@
                             <label for="email">Email:<span class="required">*</span></label>
                             <input type="email" id="email" name="email" formControlName="email"
                                 placeholder="Enter your Email" required>
-                            <span class="text-danger"
+                            <span class="danger"
                                 *ngIf="(reactiveFormControl.email.touched) && reactiveFormControl.email.errors?.required">
                                 Email is required
                             </span>
+                            <span class="danger"
+                            *ngIf="(reactiveFormControl.email.touched) && reactiveFormControl.email.errors?.email">
+                           Invaild Email
+                        </span>
                         </div>
                         <div class="form-group">
                             <label for="phno">Phone:<span class="required">*</span></label>
                             <input type="text" id="phno" name="phno" formControlName="phno"
                                 placeholder="Enter your Phone Number" required>
-                            <span class="text-danger"
+                            <span class="danger"
                                 *ngIf="(reactiveFormControl.phno.touched) && reactiveFormControl.phno.errors?.required">
                                 Phone Number is required
                             </span>
+                            <span class="danger"
+                            *ngIf="(reactiveFormControl.phno.touched) && reactiveFormControl.phno.errors?.pattern">
+                            Please, Enter 10 digit Mobile Number.
+                        </span>
                         </div>
                         <div class="form-group">
                             <label for="address">Address:<span class="required">*</span></label>
                             <textarea id="address" formControlName="address" placeholder="Enter your Address"
                                 required></textarea>
-                            <span class="text-danger"
+                            <span class="danger"
                                 *ngIf="(reactiveFormControl.address.touched) && reactiveFormControl.address.errors?.required">
                                 Address is required
                             </span>
@@ -58,7 +66,7 @@
                             <label for="dateofjoining">Date of Joining:<span class="required">*</span></label>
                             <input id="dateofjoining" type="date" formControlName="dateofjoining"
                                 placeholder="Enter your Date Of Joining" required>
-                            <span class="text-danger"
+                            <span class="danger"
                                 *ngIf="(reactiveFormControl.dateofjoining.touched) && reactiveFormControl.dateofjoining.errors?.required">
                                 Date of Joining is required
                             </span>
@@ -67,7 +75,7 @@
                             <label for="salary">Salary:<span class="required">*</span></label>
                             <input id="salary" type="text" formControlName="salary" placeholder="Enter your salary"
                                 required>
-                            <span class="text-danger"
+                            <span class="danger"
                                 *ngIf="(reactiveFormControl.salary.touched) && reactiveFormControl.salary.errors?.required">
                                 Salary is required
                             </span>
@@ -76,7 +84,7 @@
                             <label for="designation">Designation:<span class="required">*</span></label>
                             <input id="designation" type="text" formControlName="designation"
                                 placeholder="Enter your designation" required>
-                            <span class="text-danger"
+                            <span class="danger"
                                 *ngIf="(reactiveFormControl.designation.touched) && reactiveFormControl.designation.errors?.required">
                                 Designation is required
                             </span>
@@ -95,7 +103,7 @@
                             </span>
                         </div>
 
-                        <button type="submit" class="btn btn-primary" id="add">Add Staff</button>
+                        <button type="submit" class="btn btn-primary" [disabled]="!reactiveForm.valid" id="add">Add Staff</button>
                         <button type="reset" class="btn btn-primary" id="reset">Reset</button>
 
                     </form>
