--- a/src/app/admin/edit-staff/edit-staff.component.html
+++ b/src/app/admin/edit-staff/edit-staff.component.html
@@ -1,69 +1,118 @@
 <app-navbar></app-navbar>
 <div class="container">
-    <div class="row">
-        <div class="col-md-6 offset-md-3">
-          <div class="card">
-            <div class="card-header">
-              <h3>Edit Staff</h3>
+  <div class="row">
+    <div class="col-md-6 offset-md-3">
+      <div class="card">
+        <div class="card-header">
+          <h3>Edit Staff</h3>
+        </div>
+        <div class="card-body">
+          <form [formGroup]="reactiveForm" (ngSubmit)="editStaff()">
+            <div class="form-group">
+              <div clas="row">
+                <label class="col-md-4" for="name">Name:</label>
+                <input class="col-md-5" id="name" type="text" formControlName="name" placeholder="Enter your name"
+                  required [(ngModel)]="staff.name">
+                <div class="danger"
+                  *ngIf="(reactiveFormControl.name.touched) && reactiveFormControl.name.errors?.required">
+                  Name is required
+                </div>
+              </div>
             </div>
-            <div class="card-body">
-<form [formGroup]="reactiveForm" (ngSubmit)="onSubmit()">
-    <div class="form-group">
-      <div clas="row">
-    <label class="col-md-4"for="name">Name:</label>
-    <input class="col-md-5"id="name" type="text" formControlName="name" placeholder="Enter your name" required [(ngModel)]="staff.name">
-    </div>
-  </div>
-    <div class="form-group">
-      <div clas="row">
-    <label class="col-md-4" for="dob">Date of Birth:</label>
-    <input class="col-md-5" id="dob" type="date" formControlName="dob" placeholder="Select date of birth" required [(ngModel)]="staff.dob">
-    </div>
-  </div>
-    <div class="form-group">
-      <div clas="row">
-    <label class="col-md-4" for="email">Email:</label>
-    <input class="col-md-5" type="email" id="email" name="email" formControlName="email" placeholder="Enter your Email" required [(ngModel)]="staff.email">
-    </div>
-  </div>
-    <div class="form-group">
-      <div clas="row">
-    <label class="col-md-4" for="phno">Phone:</label>
-    <input class="col-md-5" type="text" id="phno" name="phno" formControlName="phno" placeholder="Enter your Phone Number" required [(ngModel)]="staff.phno">
-   </div>
-  </div>
-    <div class="form-group">
-      <div clas="row">
-    <label class="col-md-4" for="address">Address:</label>
-    <textarea class="col-md-5" id="address" formControlName="address" placeholder="Enter your Address" required [(ngModel)]="staff.address"></textarea>
-    </div>
-  </div>
-    <div class="form-group">
-      <div clas="row">
-        <label class="col-md-4" for="dateOfJoining">Date of Joining:</label>
-        <input class="col-md-5" id="dateOfJoining" type="date" formControlName="dateOfJoining" placeholder="Enter your Date Of Joining" required [(ngModel)]="staff.dateOfJoining">
-        </div>
-        </div>
-    <div class="form-group">
-      <div clas="row">
-    <label class="col-md-4" for="salary">Salary:</label>
-    <input class="col-md-5" id="salary" type="text" formControlName="salary" placeholder="Enter your salary" required [(ngModel)]="staff.salary">
-    </div>
-    </div>
-    <div class="form-group">
-      <div clas="row">
-        <label class="col-md-4" for="designation">Designation:</label>
-        <input iclass="col-md-5" d="designation" type="text" formControlName="designation" placeholder="Enter your designation" required [(ngModel)]="staff.designation">
-        </div>
-        </div>
+            <div class="form-group">
+              <div clas="row">
+                <label class="col-md-4" for="dob">Date of Birth:</label>
+                <input class="col-md-5" id="dob" type="date" formControlName="dob" placeholder="Select date of birth"
+                  required [(ngModel)]="staff.dob">
+                <div class="danger"
+                  *ngIf="(reactiveFormControl.dob.touched) && reactiveFormControl.dob.errors?.required">
+                  Date of Birth is required
+                </div>
+              </div>
+            </div>
+            <div class="form-group">
+              <div clas="row">
+                <label class="col-md-4" for="email">Email:</label>
+                <input class="col-md-5" type="email" id="email" name="email" formControlName="email"
+                  placeholder="Enter your Email" required [(ngModel)]="staff.email">
+              </div>
+              <div class="danger"
+                *ngIf="(reactiveFormControl.email.touched) && reactiveFormControl.email.errors?.required">
+                Email is required
+              </div>
+              <div class="danger"
+                *ngIf="(reactiveFormControl.email.touched) && reactiveFormControl.email.errors?.email">
+                Email is Invaild
+              </div>
+            </div>
+            <div class="form-group">
+              <div clas="row">
+                <label class="col-md-4" for="phno">Phone:</label>
+                <input class="col-md-5" type="text" id="phno" name="phno" formControlName="phno"
+                  placeholder="Enter your Phone Number" required [(ngModel)]="staff.phno">
+                <div class="danger"
+                  *ngIf="(reactiveFormControl.phno.touched) && reactiveFormControl.phno.errors?.required">
+                  Phone Number is required
+                </div>
+                <div class="danger"
+                  *ngIf="(reactiveFormControl.phno.touched) && reactiveFormControl.phno.errors?.pattern">
+                  Please, Enter 10 digit Mobile Number.
+                </div>
+              </div>
+            </div>
+            <div class="form-group">
+              <div clas="row">
+                <label class="col-md-4" for="address">Address:</label>
+                <textarea class="col-md-5" id="address" formControlName="address" placeholder="Enter your Address"
+                  required [(ngModel)]="staff.address"></textarea>
+                <div class="danger"
+                  *ngIf="(reactiveFormControl.address.touched) && reactiveFormControl.address.errors?.required">
+                  Address is required
+                </div>
+              </div>
+            </div>
+            <div class="form-group">
+              <div clas="row">
+                <label class="col-md-4" for="dateOfJoining">Date of Joining:</label>
+                <input class="col-md-5" id="dateOfJoining" type="date" formControlName="dateOfJoining"
+                  placeholder="Enter your Date Of Joining" required [(ngModel)]="staff.dateOfJoining">
+              </div>
+              <div class="danger"
+                *ngIf="(reactiveFormControl.dateOfJoining.touched) && reactiveFormControl.dateOfJoining.errors?.required">
+                Date of Joining is required
+              </div>
+            </div>
+            <div class="form-group">
+              <div clas="row">
+                <label class="col-md-4" for="salary">Salary:</label>
+                <input class="col-md-5" id="salary" type="text" formControlName="salary" placeholder="Enter your salary"
+                  required [(ngModel)]="staff.salary">
+                <div class="danger"
+                  *ngIf="(reactiveFormControl.salary.touched) && reactiveFormControl.salary.errors?.required">
+                  Salary is required
+                </div>
+              </div>
+            </div>
+            <div class="form-group">
+              <div clas="row">
+                <label class="col-md-4" for="designation">Designation:</label>
+                <input class="col-md-5" d="designation" type="text" formControlName="designation"
+                  placeholder="Enter your designation" required [(ngModel)]="staff.designation">
+                <div class="danger"
+                  *ngIf="(reactiveFormControl.designation.touched) && reactiveFormControl.designation.errors?.required">
+                  Designation is required
+                </div>
+              </div>
+            </div>
 
-    <button type="submit" class="btn btn-primary" id="edit">Edit Staff</button>
-    &nbsp;
-    
-    <button type="reset" class="btn btn-primary" id="reset">Reset</button>   
-</form>
-</div>
-</div>
-</div>
-</div>
+            <button type="submit" class="btn btn-primary" id="edit" [disabled]="!reactiveForm.valid">Save
+              Changes</button>
+            &nbsp;
+
+            <button type="reset" class="btn btn-primary" id="reset">Reset</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
