--- a/src/app/admin/enrollment-list/enrollment-list.component.css
+++ b/src/app/admin/enrollment-list/enrollment-list.component.css
@@ -47,9 +47,19 @@ select {
   width: 300px;
 }
 
+th,
+td {
+  border: 1px solid white;
+}
+thead {
+  color: wheat;
+}
+
 .table {
+  border-collapse: collapse;
   background-color: black;
   color: white;
+  border: 1px solid white;
 }
 
 #view {
