--- a/src/app/admin/enrollment-list/enrollment-list.component.html
+++ b/src/app/admin/enrollment-list/enrollment-list.component.html
@@ -2,96 +2,113 @@
 <div class="form-group">
     <div class="row">
         <div class="col-md-6 offset-md-3">
-          <div class="card">
-            <div class="card-header">
-              <h3>View Enrollment</h3>
+            <div class="card">
+                <div class="card-header">
+                    <h3>View Enrollment</h3>
+                </div>
+                <div class="card-body">
+                    <form [formGroup]="reactiveForm" (ngSubmit)="viewEnrollment()">
+
+                        <div class="container">
+                            <label for="academicYear">Select Academic Year: <span class="required">*</span></label>
+                            <select id="academicYear" formControlName="academicYear">
+                                <option>Select Academic Year</option>
+                                <option *ngFor="let academicYear of academicYears">{{academicYear}}</option>
+                            </select>
+                            <span class="text-danger"
+                                *ngIf="(reactiveFormControl.academicYear.touched) && reactiveFormControl.academicYear.errors?.required">
+                                Academic Year is required
+                            </span>
+                        </div>
+                        <div class="container">
+                            <label for="department">Select Department: <span class="required">*</span></label>
+                            <select id="department" formControlName="department"
+                                >
+                                <option>Select Department</option>
+                                <option *ngFor="let department of departments" [value]="department.id">
+                                    {{department.name}}</option>
+                            </select>
+                            <span class="text-danger"
+                                *ngIf="(reactiveFormControl.department.touched) && reactiveFormControl.department.errors?.required">
+                                Department is required
+                            </span>
+                        </div>
+
+                        <div class="container">
+                            <label for="courseType">Select Course Type: <span class="required">*</span></label>
+                            <select id="courseType" formControlName="courseType"
+                                (change)="getCoursesByDepartmentAndCourseType(reactiveForm.get('department').value, $event.target.value)">
+                                <option>Select CourseType</option>
+                                <option *ngFor="let courseType of courseTypes" [value]="courseType.id">
+                                    {{courseType.courseTypeName}}
+                                </option>
+                            </select>
+                            <span class="text-danger"
+                                *ngIf="(reactiveFormControl.courseType.touched) && reactiveFormControl.courseType.errors?.required">
+                                Course Type is required
+                            </span>
+                        </div>
+                        <div class="container">
+                            <label for="course">Select Course: <span class="required">*</span></label>
+                            <select id="course" formControlName="course"
+                                (change)="getSemestersByCourseType(reactiveForm.get('courseType').value)">
+                                <option>Select Course</option>
+                                <option *ngFor="let course of courses" [value]="course.id">{{course.name}}</option>
+                            </select>
+                            <span class="text-danger"
+                                *ngIf="(reactiveFormControl.course.touched) && reactiveFormControl.course.errors?.required">
+                                Course is required
+                            </span>
+                        </div>
+                        <div class="container">
+                            <label for="semester">Select Semester: <span class="required">*</span></label>
+                            <select id="semester" formControlName="semester"
+                                (change)="getSubjectByCourseAndSemester(reactiveForm.get('course').value, $event.target.value)">
+                                <option>Select Semester
+
+                                </option>
+                                <option *ngFor="let semester of semesters" [value]="semester.id">{{semester.name}}
+                                </option>
+                            </select>
+                            <span class="text-danger"
+                                *ngIf="(reactiveFormControl.semester.touched) && reactiveFormControl.semester.errors?.required">
+                                Semester is required
+                            </span>
+                        </div>
+                        <div class="container">
+                            <label for="subject">Select Subject: <span class="required">*</span></label>
+                            <select id="subject" formControlName="subject" (change)="getAssignedStaffsBySubjectId(reactiveForm.get('subject').value)" >
+                                <option>Select Subject</option>
+                                <option *ngFor="let subject of subjects" [value]="subject.id">{{subject.name}}</option>
+                            </select>
+                            <span class="text-danger"
+                                *ngIf="(reactiveFormControl.subject.touched) && reactiveFormControl.subject.errors?.required">
+                                Subject is required
+                            </span>
+                        </div>
+                        <div class="container">
+                            <label for="staff">Select Staff: <span class="required">*</span></label>
+                            <select id="staff" formControlName="staff">
+                                <option>Select Staff</option>
+                                <option *ngFor="let staff of staffs" [value]="staff.id">{{staff.name}}</option>
+                            </select>
+                            <span class="text-danger"
+                                *ngIf="(reactiveFormControl.staff.touched) && reactiveFormControl.staff.errors?.required">
+                                Staff is required
+                            </span>
+                        </div>
+                        <br><br>
+                        <button type="submit" id="view" [disabled]="!reactiveForm.valid"
+                            class="btn btn-primary">View</button>
+                            &nbsp;
+                            <button type="reset" class="btn btn-primary" id="reset">Reset</button>
+                    </form>
+                </div>
             </div>
-            <div class="card-body">
-<form [formGroup]="reactiveForm" (ngSubmit)="onSubmit()"> 
-    
-    <div class="container">
-        <label for="academicYear">Select Academic Year: <span class="required">*</span></label>
-        <select id="academicYear" formControlName="academicYear">
-            <option *ngFor="let academicYear of academicYears">{{academicYear}}</option>
-        </select>
-        <span class="text-danger"
-        *ngIf="(reactiveFormControl.academicYear.touched) && reactiveFormControl.academicYear.errors?.required">
-       Academic Year is required
-    </span>  
+        </div>
     </div>
-    <div class="container">
-        <label for="department">Select Department: <span class="required">*</span></label>
-        <select id="department" formControlName="department" (change)="getStaffsByDepartment(reactiveForm.get('department').value)">
-            <option *ngFor="let department of departments" [value]="department.id">{{department.name}}</option>
-        </select>
-        <span class="text-danger"
-        *ngIf="(reactiveFormControl.department.touched) && reactiveFormControl.department.errors?.required">
-       Department is required
-    </span>  
-    </div>
-   
-    <div class="container">
-        <label for="courseType">Select Course Type: <span class="required">*</span></label>
-        <select id="courseType" formControlName="courseType"
-            (change)="getCoursesByDepartmentAndCourseType(reactiveForm.get('department').value, $event.target.value)">
-            <option *ngFor="let courseType of courseTypes" [value]="courseType.id">{{courseType.courseTypeName}}
-            </option>
-        </select>
-        <span class="text-danger"
-        *ngIf="(reactiveFormControl.courseType.touched) && reactiveFormControl.courseType.errors?.required">
-       Course Type is required
-    </span> 
-    </div>
-    <div class="container">
-        <label for="course">Select Course: <span class="required">*</span></label>
-        <select id="course" formControlName="course"
-            (change)="getSemestersByCourseType(reactiveForm.get('courseType').value)">
-            <option *ngFor="let course of courses" [value]="course.id">{{course.name}}</option>
-        </select>
-        <span class="text-danger"
-        *ngIf="(reactiveFormControl.course.touched) && reactiveFormControl.course.errors?.required">
-             Course is required
-        </span>  
-    </div>
-    <div class="container">
-        <label for="semester">Select Semester: <span class="required">*</span></label>
-        <select id="semester" formControlName="semester" (change)="getSubjectByCourseAndSemester(reactiveForm.get('course').value, $event.target.value)">
-            <option *ngFor="let semester of semesters" [value]="semester.id">{{semester.name}}</option>
-        </select>
-        <span class="text-danger"
-        *ngIf="(reactiveFormControl.semester.touched) && reactiveFormControl.semester.errors?.required">
-             Semester is required
-        </span>  
-    </div>
-    <div class="container">
-        <label for="subject">Select Subject: <span class="required">*</span></label>
-        <select id="subject" formControlName="subject">
-            <option *ngFor="let subject of subjects" [value]="subject.id">{{subject.name}}</option>
-        </select>
-        <span class="text-danger"
-        *ngIf="(reactiveFormControl.subject.touched) && reactiveFormControl.subject.errors?.required">
-             Subject is required
-        </span>  
-    </div>
-    <div class="container">
-        <label for="staff">Select Staff: <span class="required">*</span></label>
-        <select id="staff" formControlName="staff">
-            <option *ngFor="let staff of staffs" [value]="staff.id">{{staff.name}}</option>
-        </select>
-        <span class="text-danger"
-        *ngIf="(reactiveFormControl.staff.touched) && reactiveFormControl.staff.errors?.required">
-             Staff is required
-        </span>  
-    </div>
-    <br><br>
-    <button type="submit" id="view" class="btn btn-primary">View</button>
-</form>
 </div>
-</div>
-</div>
-</div>
-</div>
-<table class="table"  *ngIf="showTable">
+<table class="table" *ngIf="showTable">
     <thead>
         <tr>
             <th>Name</th>
@@ -113,4 +130,3 @@
         </tr>
     </tbody>
 </table>
-
