--- a/src/app/admin/navbar/navbar.component.html
+++ b/src/app/admin/navbar/navbar.component.html
@@ -1,60 +1,65 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-black">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Student Enrollment</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/home"><i id="home" class="fa fa-home"></i>Home</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="studentDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Student
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="studentDropdown">
-              <li><a class="dropdown-item" routerLink="/add-student">Add Student</a></li>
-              <li><a class="dropdown-item" routerLink="/student-list">View Student</a></li>
-              <li><a class="dropdown-item" routerLink="/upgrade">Upgrade Student</a></li>
-            </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="staffDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Staff
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="staffDropdown">
-              <li><a class="dropdown-item" routerLink="/add-staff">Add Staff</a></li>
-              <li><a class="dropdown-item" routerLink="/staff-list">View Staff</a></li>
-              <li><a class="dropdown-item" routerLink="/staff-assign">Assign Staff</a></li>
-              <li><a class="dropdown-item" routerLink="/staff-assign-list">View Assigned Staff</a></li>
-            </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="subjectDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Subject
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="subjectDropdown">
-              <li><a class="dropdown-item" routerLink="/add-subject">Add Subject</a></li>
-              <li><a class="dropdown-item" routerLink="/subject-list">View Subject</a></li>
-            </ul>
-          </li>
-          <!-- <li class="nav-item">
-            <a class="nav-link" routerLink="/enrollment-admin-list">Enrollment </a>
-          </li> -->
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="enrollmentDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Enrollment
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="enrollmentDropdown">
-              <li><a class="dropdown-item" routerLink="/enrollment-schedule">Schedule Enrollment</a></li>
-              <li><a class="dropdown-item" routerLink="/enrollment-admin-list">View Enrollment </a></li>
-              </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/logout" (click)="logout()">Logout  <i class="fa fa-sign-out" aria-hidden="true"></i></a>
-          </li>
-           
-        </ul>
-      </div>
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Student Enrollment</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/home"><i id="home" class="fa fa-home"></i>Home</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="studentDropdown" role="button" data-bs-toggle="dropdown"
+            aria-expanded="false">
+            Student
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="studentDropdown">
+            <li><a class="dropdown-item" routerLink="/student/add">Add Student</a></li>
+            <li><a class="dropdown-item" routerLink="/student/list">View Student</a></li>
+            <li><a class="dropdown-item" routerLink="/student/upgrade">Upgrade Student</a></li>
+          </ul>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="staffDropdown" role="button" data-bs-toggle="dropdown"
+            aria-expanded="false">
+            Staff
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="staffDropdown">
+            <li><a class="dropdown-item" routerLink="/staff/add">Add Staff</a></li>
+            <li><a class="dropdown-item" routerLink="/staff/list">View Staff</a></li>
+            <li><a class="dropdown-item" routerLink="/staff/assign">Assign Staff</a></li>
+            <li><a class="dropdown-item" routerLink="/staff/assign/list">View Assigned Staff</a></li>
+          </ul>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="subjectDropdown" role="button" data-bs-toggle="dropdown"
+            aria-expanded="false">
+            Subject
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="subjectDropdown">
+            <li><a class="dropdown-item" routerLink="/subject/add">Add Subject</a></li>
+            <li><a class="dropdown-item" routerLink="/subject/list">View Subject</a></li>
+          </ul>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="enrollmentDropdown" role="button" data-bs-toggle="dropdown"
+            aria-expanded="false">
+            Enrollment
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="enrollmentDropdown">
+            <li><a class="dropdown-item" routerLink="/enrollment/schedule">Schedule Enrollment</a></li>
+            <li><a class="dropdown-item" routerLink="/enrollment/list/admin">View Enrollment </a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/logout" (click)="logout()">Logout <i class="fa fa-sign-out"
+              aria-hidden="true"></i></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" id="name"><i class="fa fa-user" aria-hidden="true"> {{name}}</i></a>
+        </li>
+      </ul>
     </div>
+  </div>
