--- a/src/app/admin/staff-list/staff-list.component.css
+++ b/src/app/admin/staff-list/staff-list.component.css
@@ -26,9 +26,8 @@
 select {
   width: 100%;
   height: 34px;
-  font-size: 14px;
-  line-height: 1.42857143;
-  color: #555;
+  font-size: 16px;
+  color: #000;
   background-color: #fff;
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -40,9 +39,21 @@ select {
   width: 300px;
 }
 
+th,
+td {
+  border: 1px solid white;
+}
+thead {
+  color: wheat;
+}
+#reset{
+  margin-left: 30px;
+}
 .table {
+  border-collapse: collapse;
   background-color: black;
   color: white;
+  border: 1px solid white;
 }
 
 .btn-primary {
