--- a/src/app/admin/student-list/student-list.component.css
+++ b/src/app/admin/student-list/student-list.component.css
@@ -13,12 +13,21 @@
   background-color: rgb(89, 141, 214);
 }
 
-table, th, td {
+th,
+td {
   border: 1px solid white;
-  border-collapse: collapse;
-  margin-left:auto;
-  margin-right:auto
 }
+thead {
+  color: wheat;
+}
+
+.table {
+  border-collapse: collapse;
+  background-color: black;
+  color: white;
+  border: 1px solid white;
+}
+
 .card-body {
   background-color: rgb(3, 26, 59);
 }
@@ -31,20 +40,14 @@ table, th, td {
 .form-group input {
   border-radius: 5px;
 }
-thead{
-  color: wheat;
-}
-.table {
-  background-color: black;
-  color: white;
-}
+
+
 
 select {
   width: 100%;
   height: 34px;
-  font-size: 14px;
-  line-height: 1.42857143;
-  color: #555;
+  font-size: 16px;
+  color: black;
   background-color: #fff;
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -60,6 +63,6 @@ select {
   margin-left: 200px;
 }
 
-#edit{
+#edit {
   width: 100px;
 }
