--- a/src/app/admin/subject-list/subject-list.component.html
+++ b/src/app/admin/subject-list/subject-list.component.html
@@ -2,64 +2,78 @@
 <div class="form-group">
     <div class="row">
         <div class="col-md-6 offset-md-3">
-          <div class="card">
-            <div class="card-header">
-              <h3>List Subject</h3>
+            <div class="card">
+                <div class="card-header">
+                    <h3>List Subject</h3>
+                </div>
+                <div class="card-body">
+                    <form [formGroup]="reactiveForm" (ngSubmit)="listSubject()">
+                        <div class="container">
+                            <label for="department">Select Department:</label>
+                            
+                            <select id="department" formControlName="department">
+                                <option>Select Department</option>
+                                <option *ngFor="let department of departments" [value]="department.id">
+                                    {{department.name}}</option>
+                            </select>
+                            <span class="text-danger"
+                                *ngIf="(reactiveFormControl.department.touched) && reactiveFormControl.department.errors?.required">
+                                Department is required
+                            </span>
+                        </div>
+                        <div class="container">
+                            <label for="courseType">Select Course Type:</label>
+                            
+                            <select id="courseType" formControlName="courseType"
+                                (change)="getCoursesByDepartmentAndCourseType(reactiveForm.get('department').value, $event.target.value)"
+                                (change)="getSemestersByCourseType(reactiveForm.get('courseType').value)">
+                                <option>Select CourseType</option>
+                                <option *ngFor="let courseType of courseTypes" [value]="courseType.id">
+                                    {{courseType.courseTypeName}}
+                                </option>
+                            </select>
+                            <span class="text-danger"
+                                *ngIf="(reactiveFormControl.courseType.touched) && reactiveFormControl.courseType.errors?.required">
+                                Course Type is required
+                            </span>
+                        </div>
+                        <div class="container">
+                            <label for="course">Select Course:</label>
+                            <select id="course" formControlName="course"
+                               >
+                               <option>Select Course</option>
+                                <option *ngFor="let course of courses" [value]="course.id">{{course.name}}</option>
+                            </select>
+                            <span class="text-danger"
+                                *ngIf="(reactiveFormControl.course.touched) && reactiveFormControl.course.errors?.required">
+                                Course is required
+                            </span>
+                        </div>
+                        <div class="container">
+                            <label for="semester">Select Semester:</label>
+                            <select id="semester" formControlName="semester">
+                                <option>Select Semester</option>
+                                <option *ngFor="let semester of semesters" [value]="semester.id">{{semester.name}}
+                                </option>
+
+                            </select>
+                            <span class="text-danger"
+                                *ngIf="(reactiveFormControl.semester.touched) && reactiveFormControl.semester.errors?.required">
+                                Semester is required
+                            </span>
+                        </div>
+                        <br><br>
+                        <button type="submit" class="btn btn-primary" id="view" [disabled]="!reactiveForm.valid">View
+                            Subject</button>
+                            &nbsp;
+                            <button type="reset" class="btn btn-primary" id="reset">Reset</button>
+                    </form>
+                </div>
             </div>
-            <div class="card-body">
-<form [formGroup]="reactiveForm" (ngSubmit)="onSubmit()">
-    <div class="container">
-        <label for="department">Select Department:</label>
-        <select id="department" formControlName="department">
-            <option *ngFor="let department of departments" [value]="department.id">{{department.name}}</option>
-        </select>
-        <span class="text-danger"
-        *ngIf="(reactiveFormControl.department.touched) && reactiveFormControl.department.errors?.required">
-       Department is required
-    </span>  
+        </div>
     </div>
-    <div class="container">
-        <label for="courseType">Select Course Type:</label>
-        <select id="courseType" formControlName="courseType"
-            (change)="getCoursesByDepartmentAndCourseType(reactiveForm.get('department').value, $event.target.value)">
-            <option *ngFor="let courseType of courseTypes" [value]="courseType.id">{{courseType.courseTypeName}}
-            </option>
-        </select>
-        <span class="text-danger"
-        *ngIf="(reactiveFormControl.courseType.touched) && reactiveFormControl.courseType.errors?.required">
-       Course Type is required
-    </span>  
-    </div>
-    <div class="container">
-        <label for="course">Select Course:</label>
-        <select id="course" formControlName="course"
-            (change)="getSemestersByCourseType(reactiveForm.get('courseType').value)">
-            <option *ngFor="let course of courses" [value]="course.id">{{course.name}}</option>
-        </select>
-        <span class="text-danger"
-        *ngIf="(reactiveFormControl.course.touched) && reactiveFormControl.course.errors?.required">
-        Course is required
-    </span>  
-    </div>
-    <div class="container">
-        <label for="semester">Select Semester:</label>
-        <select id="semester" formControlName="semester">
-            <option *ngFor="let semester of semesters" [value]="semester.id">{{semester.name}}</option>
-        </select>
-        <span class="text-danger"
-        *ngIf="(reactiveFormControl.semester.touched) && reactiveFormControl.semester.errors?.required">
-       Semester is required
-    </span>  
-    </div>
-    <br><br>
-    <button type="submit" class="btn btn-primary" id="view">View Subject</button>
-</form>
 </div>
-</div>
-</div>
-</div>
-</div>
-<table class="table"  *ngIf="showTable">
+<table class="table" *ngIf="showTable">
     <thead>
         <tr>
             <th>SN</th>
@@ -74,8 +88,8 @@
             <td>{{ subject.code }}</td>
             <td>{{ subject.name }}</td>
             <td>{{ subject.credits }}</td>
-            
-            
+
+
         </tr>
     </tbody>
 </table>
