--- a/src/app/admin/upgrade/upgrade.component.html
+++ b/src/app/admin/upgrade/upgrade.component.html
@@ -1,70 +1,74 @@
-
 <app-navbar></app-navbar>
 <div class="form-group">
     <div class="row">
         <div class="col-md-6 offset-md-3">
-          <div class="card">
-            <div class="card-header">
-              <h3>Upgrade Student</h3>
-            </div>
-            <div class="card-body">
-<form [formGroup]="reactiveForm" (ngSubmit)="onSubmit()">
-    <div class="container">
-        <label for="academicYear">Select Academic Year: <span class="required">*</span></label>
-        <select id="academicYear" formControlName="academicYear">
-            <option disabled selected>Select Academic Year</option>
-            <option *ngFor="let academicYear of academicYears">{{academicYear}}</option>
-        </select>
-        <span class="text-danger"
-        *ngIf="(reactiveFormControl.academicYear.touched) && reactiveFormControl.academicYear.errors?.required">
-       Academic Year is required
-    </span>  
-    </div>
-    <div class="container">
-        <label for="department">Select Department: <span class="required">*</span></label>
-        <select id="department" formControlName="department">
-            <option disabled selected>Select Department</option>
-            <option *ngFor="let department of departments" [value]="department.id">{{department.name}}</option>
-        </select>
-        <span class="text-danger"
-        *ngIf="(reactiveFormControl.department.touched) && reactiveFormControl.department.errors?.required">
-       Department is required
-    </span>  
-    </div>
-    <div class="container">
-        <label for="courseType">Select Course Type: <span class="required">*</span></label>
-        <select id="courseType" formControlName="courseType"
-            (change)="getCoursesByDepartmentAndCourseType(reactiveForm.get('department').value, $event.target.value)">
-            <option *ngFor="let courseType of courseTypes" [value]="courseType.id">{{courseType.courseTypeName}}
-            </option>
-        </select>
-        <span class="text-danger"
-        *ngIf="(reactiveFormControl.courseType.touched) && reactiveFormControl.courseType.errors?.required">
-       Course Type is required
-    </span> 
-    </div>
-    <div class="container">
-        <label for="course">Select Course: <span class="required">*</span></label>
-        <select id="course" formControlName="course"
-            (change)="getSemestersByCourseType(reactiveForm.get('courseType').value)">
-            <option *ngFor="let course of courses" [value]="course.id">{{course.name}}</option>
-        </select>
-    </div>
-    <span class="text-danger"
-    *ngIf="(reactiveFormControl.course.touched) && reactiveFormControl.course.errors?.required">
-         Course is required
-    </span>  
-    <div class="container">
-        <label for="semester">Select Semester: <span class="required">*</span></label>
-        <select id="semester" formControlName="semester">
-            <option *ngFor="let semester of semesters" [value]="semester.id">{{semester.name}}</option>
-        </select>
-        <span class="text-danger"
-        *ngIf="(reactiveFormControl.semester.touched) && reactiveFormControl.semester.errors?.required">
-       Semester is required
-    </span>  
-    </div>
-    <br><br>
-    <button type="submit" class="btn btn-primary" id="upgrade">Upgrade Student</button>
-    <!-- <div class="alert alert-success" *ngIf="isAlert">{{message}}</div> -->
-</form>
+            <div class="card">
+                <div class="card-header">
+                    <h3>Upgrade Student</h3>
+                </div>
+                <div class="card-body">
+                    <form [formGroup]="reactiveForm" (ngSubmit)="upgradeStudent()">
+                        <div class="container">
+                            <label for="academicYear">Select Academic Year: <span class="required">*</span></label>
+                            <select id="academicYear" formControlName="academicYear">
+                                <option disabled selected>Select Academic Year</option>
+                                <option *ngFor="let academicYear of academicYears">{{academicYear}}</option>
+                            </select>
+                            <span class="text-danger"
+                                *ngIf="(reactiveFormControl.academicYear.touched) && reactiveFormControl.academicYear.errors?.required">
+                                Academic Year is required
+                            </span>
+                        </div>
+                        <div class="container">
+                            <label for="department">Select Department: <span class="required">*</span></label>
+                            <select id="department" formControlName="department">
+                                <option disabled selected>Select Department</option>
+                                <option *ngFor="let department of departments" [value]="department.id">
+                                    {{department.name}}</option>
+                            </select>
+                            <span class="text-danger"
+                                *ngIf="(reactiveFormControl.department.touched) && reactiveFormControl.department.errors?.required">
+                                Department is required
+                            </span>
+                        </div>
+                        <div class="container">
+                            <label for="courseType">Select Course Type: <span class="required">*</span></label>
+                            <select id="courseType" formControlName="courseType"
+                                (change)="getCoursesByDepartmentAndCourseType(reactiveForm.get('department').value, $event.target.value)">
+                                <option *ngFor="let courseType of courseTypes" [value]="courseType.id">
+                                    {{courseType.courseTypeName}}
+                                </option>
+                            </select>
+                            <span class="text-danger"
+                                *ngIf="(reactiveFormControl.courseType.touched) && reactiveFormControl.courseType.errors?.required">
+                                Course Type is required
+                            </span>
+                        </div>
+                        <div class="container">
+                            <label for="course">Select Course: <span class="required">*</span></label>
+                            <select id="course" formControlName="course"
+                                (change)="getSemestersByCourseType(reactiveForm.get('courseType').value)">
+                                <option *ngFor="let course of courses" [value]="course.id">{{course.name}}</option>
+                            </select>
+                        </div>
+                        <span class="text-danger"
+                            *ngIf="(reactiveFormControl.course.touched) && reactiveFormControl.course.errors?.required">
+                            Course is required
+                        </span>
+                        <div class="container">
+                            <label for="semester">Select Semester: <span class="required">*</span></label>
+                            <select id="semester" formControlName="semester">
+                                <option *ngFor="let semester of semesters" [value]="semester.id">{{semester.name}}
+                                </option>
+                            </select>
+                            <span class="text-danger"
+                                *ngIf="(reactiveFormControl.semester.touched) && reactiveFormControl.semester.errors?.required">
+                                Semester is required
+                            </span>
+                        </div>
+                        <br><br>
+                        <button type="submit" class="btn btn-primary" id="upgrade"
+                            [disabled]="!reactiveForm.valid">Upgrade Student</button>
+                        &nbsp;
+                        <button type="reset" class="btn btn-primary" id="reset">Reset</button>
+                    </form>
