--- a/src/app/student/edit-profile/edit-profile.component.html
+++ b/src/app/student/edit-profile/edit-profile.component.html
@@ -1,46 +1,52 @@
-
 <app-nav-bar></app-nav-bar>
 <div class="container">
-    <div class="row">
-        <div class="col-md-6 offset-md-3">
-          <div class="card">
-            <div class="card-header">
-              <h3>Edit Profile</h3>
+  <div class="row">
+    <div class="col-md-6 offset-md-3">
+      <div class="card">
+        <div class="card-header">
+          <h3>Edit Profile</h3>
+        </div>
+        <div class="card-body">
+          <form [formGroup]="reactiveForm" (ngSubmit)="editProfile()">
+            <div class="form-group">
+              <label for="name">Name:</label>
+              <input id="name" type="text" formControlName="name" placeholder="Enter your name" required
+                [(ngModel)]="student.name">
             </div>
-            <div class="card-body">
-<form [formGroup]="reactiveForm" (ngSubmit)="onSubmit()">
-    <div class="form-group">
-    <label for="name">Name:</label>
-    <input id="name" type="text" formControlName="name" placeholder="Enter your name" required [(ngModel)]="student.name">
+            <div class="form-group">
+              <label for="dob">Date of Birth:</label>
+              <input id="dob" type="date" formControlName="dob" placeholder="Select date of birth" required
+                [(ngModel)]="student.dob">
+            </div>
+            <div class="form-group">
+              <label for="email">Email:</label>
+              <input type="email" id="email" name="email" formControlName="email" placeholder="Enter your Email"
+                required [(ngModel)]="student.email">
+            </div>
+            <div class="form-group">
+              <label for="phno">Phone:</label>
+              <input type="tel" id="phno" name="phno" formControlName="phno" placeholder="Enter your Phone Number"
+                required [(ngModel)]="student.phno">
+
+            </div>
+            <div class="form-group">
+              <label for="address">Address:</label>
+              <textarea id="address" formControlName="address" placeholder="Enter your Address" required
+                [(ngModel)]="student.address"></textarea>
+            </div>
+            <div class="form-group">
+              <label for="dateOfJoining">Date of Joining:</label>
+              <input id="dateOfJoining" type="date" formControlName="dateOfJoining"
+                placeholder="Enter your Date Of Joining" required [(ngModel)]="student.dateOfJoining">
+            </div>
+
+            <button type="submit" class="btn btn-primary" id="edit">Save Changes</button>
+            &nbsp;
+
+            <button type="reset" class="btn btn-primary" id="reset">Reset</button>
+          </form>
+        </div>
+      </div>
     </div>
-    <div class="form-group">
-    <label for="dob">Date of Birth:</label>
-    <input id="dob" type="date" formControlName="dob" placeholder="Select date of birth" required [(ngModel)]="student.dob">
-    </div>
-    <div class="form-group">
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" formControlName="email" placeholder="Enter your Email" required [(ngModel)]="student.email">
-    </div>
-    <div class="form-group">
-    <label for="phno">Phone:</label>
-    <input type="tel" id="phno" name="phno" formControlName="phno" placeholder="Enter your Phone Number" required [(ngModel)]="student.phno">
-   </div>
-    <div class="form-group">
-    <label for="address">Address:</label>
-    <textarea id="address" formControlName="address" placeholder="Enter your Address" required [(ngModel)]="student.address"></textarea>
-    </div>
-    <div class="form-group">
-    <label for="dateOfJoining">Date of Joining:</label>
-    <input id="dateOfJoining" type="date" formControlName="dateOfJoining" placeholder="Enter your Date Of Joining" required [(ngModel)]="student.dateOfJoining">
-    </div>
-    
-    <button type="submit" class="btn btn-primary" id="edit">Save Changes</button>
-    &nbsp;
-    
-    <button type="reset" class="btn btn-primary" id="reset">Reset</button>   
-</form>
-</div>
-</div>
-</div>
-</div>
+  </div>
 </div>
