--- a/src/app/student/enrollment-view/enrollment-view.component.css
+++ b/src/app/student/enrollment-view/enrollment-view.component.css
@@ -5,13 +5,29 @@ h3 {
 select {
   width: 200%;
   height: 34px;
-  font-size: 14px;
+  font-size: 16px;
   line-height: 1.42857143;
-  color: #555;
+  color: #000;
   background-color: #fff;
   border: 1px solid #ccc;
   border-radius: 4px;
 }
+
+th,
+td {
+  border: 1px solid white;
+}
+thead {
+  color: wheat;
+}
+
+.table {
+  border-collapse: collapse;
+  background-color: black;
+  color: white;
+  border: 1px solid white;
+}
+
 
 .container {
   margin-top: 20px;
