--- a/src/app/student/enrollment-view/enrollment-view.component.html
+++ b/src/app/student/enrollment-view/enrollment-view.component.html
@@ -2,59 +2,63 @@
 <div class="form-group">
     <div class="row">
         <div class="col-md-6 offset-md-3">
-          <div class="card">
-            <div class="card-header">
-              <h3>List Enrollment</h3>
+            <div class="card">
+                <div class="card-header">
+                    <h3>List Enrollment</h3>
+                </div>
+                <div class="card-body">
+                    <form [formGroup]="reactiveForm" (ngSubmit)="viewEnrollments()">
+                        <div class="form-group">
+                            <label class="col-md-4" for="name">Name:<span class="required">*</span></label>
+                            <input class="col-md-6" id="name" type="text" formControlName="name"
+                                placeholder="Enter your name" required [(ngModel)]="student.name" disabled>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-4" for="department">Department:<span class="required">*</span></label>
+                            <input class="col-md-6" id="department" type="text" formControlName="department"
+                                placeholder="Enter your department" required [(ngModel)]="student.department.name"
+                                disabled>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-4" for="course">Course:<span class="required">*</span></label>
+                            <input class="col-md-6" id="course" type="text" formControlName="course"
+                                placeholder="Enter your course" required [(ngModel)]="student.course.name" disabled>
+                        </div>
+                        <div class="container">
+                            <label for="courseType">Select Course Type:<span class="required">*</span></label>
+                            <select id="courseType" formControlName="courseType"
+                                (change)="getSemestersByCourseType(reactiveForm.get('courseType').value)">
+                                <option *ngFor="let courseType of courseTypes" [value]="courseType.id">
+                                    {{courseType.courseTypeName}}
+                                </option>
+                            </select>
+                        </div>
+
+                        <div class="container">
+                            <label for="semester">Select Semester:<span class="required">*</span></label>
+                            <select id="semester" formControlName="semester">
+                                <option *ngFor="let semester of semesters" [value]="semester.id">{{semester.name}}
+                                </option>
+                            </select>
+                        </div>
+                        <br><br>
+                        <button type="submit" class="btn btn-primary" id="view"
+                            [disabled]="!reactiveForm.valid">View</button>
+                    </form>
+                </div>
             </div>
-            <div class="card-body">
-<form [formGroup]="reactiveForm" (ngSubmit)="onSubmit()">
-    <div class="form-group">
-        <label class="col-md-4"for="name">Name:<span class="required">*</span></label>
-        <input class="col-md-6"id="name" type="text" formControlName="name" placeholder="Enter your name" required
-            [(ngModel)]="student.name" disabled>
+        </div>
     </div>
-    <div class="form-group">
-        <label class="col-md-4"for="department">Department:<span class="required">*</span></label>
-        <input class="col-md-6"id="department" type="text" formControlName="department"
-            placeholder="Enter your department" required [(ngModel)]="student.department.name" disabled>
-    </div>
-    <div class="form-group">
-        <label class="col-md-4"for="course">Course:<span class="required">*</span></label>
-        <input class="col-md-6"id="course" type="text" formControlName="course" placeholder="Enter your course"
-            required [(ngModel)]="student.course.name" disabled>
-    </div>
-    <div class="container">
-        <label for="courseType">Select Course Type:<span class="required">*</span></label>
-        <select id="courseType" formControlName="courseType"
-        (change)="getSemestersByCourseType(reactiveForm.get('courseType').value)">
-            <option *ngFor="let courseType of courseTypes" [value]="courseType.id">{{courseType.courseTypeName}}
-            </option>
-        </select>
-    </div>
-  
-    <div class="container">
-        <label for="semester">Select Semester:<span class="required">*</span></label>
-        <select id="semester" formControlName="semester">
-            <option *ngFor="let semester of semesters" [value]="semester.id">{{semester.name}}</option>
-        </select>
-    </div>
-    <br><br>
-    <button type="submit" class="btn btn-primary" id="view">View</button>
-</form>
 </div>
-</div>
-</div>
-</div>
-</div>
-<table class="table"  *ngIf="showTable">
-    <thead>
+<table class="table" *ngIf="showTable">
+    <thead class="text-center">
         <tr>
             <th>SN</th>
             <th>Staff Name</th>
             <th>Subject Name</th>
         </tr>
     </thead>
-    <tbody>
+    <tbody class="text-center">
         <tr *ngFor="let enrollment of enrollments; let i=index">
             <td>{{ i + 1 }}</td>
             <td>{{ enrollment.staffName }}</td>
